--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@supabase/supabase-js": "^2.58.0",
-    "expo": "^53.0.0",
+    "expo": "^54.0.10",
+    "expo-auth-session": "^7.0.8",
     "expo-blur": "~14.1.3",
     "expo-camera": "~16.1.5",
     "expo-constants": "~17.1.3",
@@ -26,6 +27,7 @@
     "expo-linear-gradient": "~14.1.3",
     "expo-linking": "~7.1.3",
     "expo-router": "~5.0.2",
+    "expo-secure-store": "~15.0.7",
     "expo-splash-screen": "~0.30.6",
     "expo-status-bar": "~2.2.2",
     "expo-symbols": "~0.4.3",
