--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "expo-blur": "~14.1.3",
     "expo-camera": "~16.1.5",
     "expo-constants": "~17.1.3",
+    "expo-document-picker": "^14.0.7",
     "expo-font": "~13.2.2",
     "expo-haptics": "~14.1.3",
+    "expo-image-picker": "^17.0.8",
     "expo-linear-gradient": "~14.1.3",
     "expo-linking": "~7.1.3",
     "expo-router": "~5.0.2",
