--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "@react-navigation/native": "^7.0.14",
     "@supabase/supabase-js": "^2.58.0",
     "expo": "^54.0.10",
+    "expo-av": "~13.10.0",
+    "expo-file-system": "~15.9.0",
     "expo-auth-session": "^7.0.8",
+    "expo-av": "^16.0.7",
     "expo-blur": "~14.1.3",
     "expo-camera": "~16.1.5",
     "expo-constants": "~17.1.3",
     "expo-document-picker": "^14.0.7",
+    "expo-file-system": "^19.0.15",
     "expo-font": "~13.2.2",
     "expo-haptics": "~14.1.3",
     "expo-image-picker": "^17.0.8",
