--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,10 @@ gtts
 wikipedia-api
 speechrecognition
 pyaudio
+flask==2.3.3
+flask-cors==4.0.0
+speechrecognition==3.10.0
+pyaudio==0.2.11
+transformers==4.30.0
+torch==2.0.1
+requests==2.31.0
